chnages done on all api
